fix: overflow for banner

--- a/wp-content/themes/mebli/assets/scss/_home.scss
+++ b/wp-content/themes/mebli/assets/scss/_home.scss
@@ -17,14 +17,8 @@
 
 .home {
   .banner {
-    position:            relative;
-    background-image:    url("../images/hero-bg.jpg");
-    background-repeat:   no-repeat;
-    background-size:     cover;
-    background-position: center;
-    height:              100vh;
-    min-height:          1080px;
-    margin-bottom:       6%;
+    margin-bottom: 6%;
+    overflow:      hidden;
     &-overlay {
       position:   absolute;
       top:        0;
